--- a/Compiler/packages.config
+++ b/Compiler/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CommandLineArgumentsParser" version="2.6.0.5" targetFramework="net35" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net35" />
   <package id="Newtonsoft.Json.Schema" version="2.0.2" targetFramework="net35" />
 </packages>
